# erlang-sqlite3

./: .gitignore  Emakefile  Emakefile.in  GNUmakefile  Makefile  Makefile.in  README.md  README.rst  Readme  build_port_win.bat  build_win.bat  configure  configure.ac  erl_crash.dump  metric.erl  msvc.mk  rebar  rebar.config  rebar.debug.config  test.erl
bk/: sqlite3.erl  sqlite3_drv.h  sqlite3_lib.erl
c_src/: Makefile.in  list.c  sqlite3_drv.c  sqlite3_drv.h  sqlite_port.c
include/: sqlite3.hrl
priv/: Makefile  Makefile.in  sqlite3_drv.c  sqlite3_drv.h
src/: sqlite.erl  sqlite3.app.src  sqlite3.erl  sqlite3_lib.erl  sqlite3_test.erl
src/test/: sqlite_test_SUITE.erl
test/: sqlite3_test.erl
